deploy/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: spotify
  name: spotify-deploy
  labels:
    name: spotify-deploy
spec:
  replicas: 1
  template:
    metadata:
      namespace: spotify-deploy
      labels:
        name: spotify-deploy
    spec:
      containers:
        - image: cescoferraro/spotify:frontend-0.0.32
          imagePullPolicy: Always
          name: frontend
        - image: cescoferraro/spotify:api-0.0.32
          imagePullPolicy: Always
          name: backend
